--- a/Days Until Seasons Today/MainInterface.storyboard
+++ b/Days Until Seasons Today/MainInterface.storyboard
@@ -46,6 +46,10 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="60"/>
+                    <connections>
+                        <outlet property="currentSeasonImageView" destination="L6Z-Xk-z10" id="z2A-9V-2j8"/>
+                        <outlet property="descriptionLabel" destination="GcN-lo-r42" id="VE4-c5-wtK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
