--- a/ WatchKit App/Base.lproj/Interface.storyboard
+++ b/ WatchKit App/Base.lproj/Interface.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3737"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="_WatchKit_App" customModuleProvider="target">
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="WatchKit_Extension">
                     <items>
                         <imageView width="40" height="40" alignment="center" image="winter_watch" contentMode="scaleAspectFit" id="AIR-5w-hcI"/>
                         <label width="1" alignment="left" text="324" textAlignment="center" minimumScaleFactor="0.90000000000000002" id="1Kf-Ay-LwN">
@@ -37,7 +37,7 @@
         <!--Glance Interface Controller-->
         <scene sceneID="BOz-TT-tkC">
             <objects>
-                <glanceController spacing="0.0" topTemplateType="extraLarge" bottomTemplateType="groupLargeLargeFooter" id="0uZ-2p-rRc" customClass="GlanceController" customModule="_WatchKit_App" customModuleProvider="target">
+                <glanceController spacing="0.0" topTemplateType="extraLarge" bottomTemplateType="groupLargeLargeFooter" id="0uZ-2p-rRc" customClass="GlanceController" customModule="WatchKit_Extension">
                     <items>
                         <label alignment="left" text="12" id="F1d-4y-OjA"/>
                         <group alignment="left" id="uCw-4Q-Ouw">
@@ -85,7 +85,7 @@
         <!--Notification Controller-->
         <scene sceneID="KIl-fV-djm">
             <objects>
-                <controller id="gdX-wl-uQE" customClass="NotificationController" customModule="_WatchKit_App" customModuleProvider="target"/>
+                <controller id="gdX-wl-uQE" customClass="NotificationController" customModule="WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="553" y="1001"/>
         </scene>
