--- a/Days Until Seasons Watch/Base.lproj/Interface.storyboard
+++ b/Days Until Seasons Watch/Base.lproj/Interface.storyboard
@@ -1,29 +1,70 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6221" systemVersion="14A389" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0ad-Tp-yks">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3734"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="10032"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
-        <scene sceneID="aou-V4-d1y">
+        <scene sceneID="Tq0-Yh-Vd2">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="0ad-Tp-yks" customClass="InterfaceController" customModule="Days_Until_Seasons_Watch_Extension">
+                    <items>
+                        <imageView width="40" height="40" alignment="center" image="winter_watch" contentMode="scaleAspectFit" id="D1C-0P-FxE"/>
+                        <label width="1" alignment="left" text="324" textAlignment="center" minimumScaleFactor="0.90000000000000002" id="bRz-AL-074">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="font" type="system" pointSize="34"/>
+                        </label>
+                        <label width="1" alignment="left" text="Days until" textAlignment="center" id="YXy-Z8-5pq">
+                            <color key="textColor" red="0.64705882349999999" green="0.65490196079999996" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </label>
+                        <label width="1" alignment="left" text="Spring" textAlignment="center" id="HQw-Rc-NRm">
+                            <color key="textColor" red="0.64705882349999999" green="0.65490196079999996" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="font" type="system" weight="light" pointSize="28"/>
+                        </label>
+                    </items>
+                    <menu key="menu" id="wJs-Cv-Pvy"/>
+                    <connections>
+                        <outlet property="currentSeasonImageView" destination="D1C-0P-FxE" id="mBg-C1-684"/>
+                        <outlet property="daysLabel" destination="bRz-AL-074" id="QQY-dq-hXj"/>
+                        <outlet property="descriptionLabel" destination="YXy-Z8-5pq" id="ewg-cN-IrI"/>
+                        <outlet property="nextSeasonLabel" destination="HQw-Rc-NRm" id="PzT-6O-knK"/>
+                    </connections>
+                </controller>
             </objects>
-            <point key="canvasLocation" x="164" y="217"/>
+            <point key="canvasLocation" x="395" y="217"/>
         </scene>
         <!--Glance Interface Controller-->
-        <scene sceneID="rjY-Ar-IMT">
+        <scene sceneID="AIz-Vr-51A">
             <objects>
-                <glanceController spacing="0.0" id="Sv0-Ai-Zie" customClass="GlanceController" customModuleProvider="target">
+                <glanceController spacing="0.0" topTemplateType="extraLarge" bottomTemplateType="groupLargeLargeFooter" id="VYi-El-NIY" customClass="GlanceController" customModule="Days_Until_Seasons_Watch_Extension">
                     <items>
-                        <group alignment="left" id="gv7-I2-MZq"/>
-                        <group alignment="left" id="eew-Gs-W6Y"/>
+                        <label alignment="left" text="12" id="N5T-bU-IN6"/>
+                        <group alignment="left" id="ogc-j4-ajn">
+                            <items>
+                                <label alignment="left" id="lT2-lE-j7p">
+                                    <fontDescription key="font" type="system" pointSize="34"/>
+                                </label>
+                                <label height="20" alignment="left" text="Days until" id="Kju-aF-yar">
+                                    <color key="textColor" red="0.64705882349999999" green="0.65490196079999996" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </label>
+                            </items>
+                        </group>
+                        <label alignment="left" text="Spring" minimumScaleFactor="0.0" id="Z8U-SO-GpF">
+                            <color key="textColor" red="0.64705882349999999" green="0.65490196079999996" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </label>
+                        <label alignment="left" id="3Ur-K0-VHs"/>
+                        <label alignment="left" hidden="YES" text="Days Until Seasons" id="hdS-gN-W7W"/>
                     </items>
                     <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="14"/>
+                    <connections>
+                        <outlet property="daysLabel" destination="N5T-bU-IN6" id="lZA-rk-3OH"/>
+                        <outlet property="descriptionLabel" destination="Kju-aF-yar" id="cMB-UB-xHe"/>
+                        <outlet property="nextSeasonLabel" destination="Z8U-SO-GpF" id="kJd-hb-Tlv"/>
+                    </connections>
                 </glanceController>
             </objects>
-            <point key="canvasLocation" x="164" y="514"/>
+            <point key="canvasLocation" x="395" y="542"/>
         </scene>
     </scenes>
 </document>
